--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
         />
+        <meta name="naver-site-verification" content="63d977745c83e055a7bda93bf56bfd611fb2d99c" />
         <title>관상노리</title>
         <meta name="title" content="관상노리" />
         <meta
