--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <meta property="og:title" content="인공지능 관상" />
         <meta
             property="og:description"
-            content="각 분야의 대표 유명인 사진 데이터로 학습한 인공지능이 나의 얼굴과 닮은 관상을 찾아드립니다. 인공지능이 보는 나의 관상 테스트 한번 해보세요!."
+            content="각 분야의 대표 유명인 사진 데이터로 학습한 인공지능이 나의 얼굴과 닮은 관상을 찾아드립니다."
         />
         <meta
             property="og:image"
