--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             name="subject"
             content="얼굴로 보는 인공지능 관상 테스트, 나의 얼굴 사진으로 관상을 찾아보세요!"
         />
-        <meta name="description" content="티쳐블머신의 학습을 기반으로 나의 얼굴과 비교해 보는 인공지능 관상 테스트">
+        <meta
+            name="description"
+            content="티쳐블머신의 학습을 기반으로 나의 얼굴과 비교해 보는 인공지능 관상 테스트"
+        />
         <meta
             name="keywords"
             content="관상 테스트, 인공지능 관상 테스트, 얼굴상, 얼굴상 테스트, 나와 닮은 관상, 관상 찾기, 얼굴로 보는 관상, 얼굴 관상, 관상얼굴, 가수상, 연예인상, 영화배우상, 정치법률가상, 부자상, 인공지능 관상, AI 얼굴상, AI 관상"
