--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             crossorigin="anonymous"
         />
         <meta name="naver-site-verification" content="63d977745c83e055a7bda93bf56bfd611fb2d99c" />
+        <meta name="google-site-verification" content="AHzJx8Rq8TsCAUbbeq1R_yDtD-wPnIXwAQJ7Qh88fO0" />
         <title>관상노리</title>
         <meta name="title" content="관상노리" />
         <meta
