--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
                 <p>&copy; Risingsun 2020. All Rights Reserved.</p>
                 <ul id="moreInfo" class="list-inline d-flex justify-content-center">
                     <li class="list-inline-item">
-                        <a href="https://animalface.site/privacy.html">Privacy</a>
+                        <a href="https://gwansangnori.site/privacy.html">Privacy</a>
                     </li>
-                    <li class="list-inline-item">
+                    <!-- <li class="list-inline-item">
                         <a href="https://animalface.site/blog">About</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </footer>
