--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             crossorigin="anonymous"
         />
         <meta name="naver-site-verification" content="63d977745c83e055a7bda93bf56bfd611fb2d99c" />
-        <meta name="google-site-verification" content="AHzJx8Rq8TsCAUbbeq1R_yDtD-wPnIXwAQJ7Qh88fO0" />
+        <meta
+            name="google-site-verification"
+            content="AHzJx8Rq8TsCAUbbeq1R_yDtD-wPnIXwAQJ7Qh88fO0"
+        />
         <title>관상노리</title>
         <meta name="title" content="관상노리" />
         <meta
@@ -47,6 +50,18 @@
             type="text/javascript"
             src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"
         ></script>
+
+        <!-- <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145482737-6"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', 'UA-145482737-6');
+        </script> -->
     </head>
 
     <body>
@@ -181,6 +196,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="mt-2 container d-flex justify-content-center ad-banner">
+            <ins
+                class="kakao_ad_area"
+                style="display: none;"
+                data-ad-unit="DAN-1ibeto5pa83fn"
+                data-ad-width="320"
+                data-ad-height="100"
+            ></ins>
+        </div>
+        <div class="mt-2 container d-flex justify-content-center ad-banner">
+            <ins
+                class="kakao_ad_area"
+                style="display: none;"
+                data-ad-unit="DAN-1jefy9znk6ibb"
+                data-ad-width="300"
+                data-ad-height="250"
+            ></ins>
+        </div>
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         <section
             id="yotube-bottom-link"
             class="mt-2 d-flex flex-column justify-content-center align-items-center"
