--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
         />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <script
             type="text/javascript"
-            src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"
+            src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f8040ac46e70268"
         ></script>
     </head>
 
@@ -171,7 +173,9 @@
                 </div>
                 <p class="result-message"></p>
                 <div id="label-container" class="d-flex flex-column justify-content-around"></div>
-                <div id="addThis" class="addthis_inline_share_toolbox_6lz1"></div>
+
+                <!-- Go to www.addthis.com/dashboard to customize your tools -->
+                <div class="addthis_inline_share_toolbox_xuf2"></div>
 
                 <div class="pt-3 image-title-wrap">
                     <button
