--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         />
         <meta name="author" content="risingsun" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="canonical" href="https://animalface.site" />
-        <meta property="og:url" content="https://animalface.site" />
+        <link rel="canonical" href="#" />
+        <meta property="og:url" content="#" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="인공지능 관상" />
         <meta
@@ -52,6 +52,17 @@
             type="text/javascript"
             src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f8040ac46e70268"
         ></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145482737-6"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', 'UA-145482737-6');
+        </script>
     </head>
 
     <body>
