--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         />
         <meta name="author" content="risingsun" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="canonical" href="#" />
-        <meta property="og:url" content="#" />
+        <link rel="canonical" href="https://gwansangnori.site" />
+        <meta property="og:url" content="https://gwansangnori.site" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="인공지능 관상" />
         <meta
@@ -98,17 +98,17 @@
                             판다팬
                         </a>
                     </li>
-                    <li
+                    <!-- <li
                         class="nav-item active"
                         onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});"
                     >
                         <a
                             class="nav-link"
                             id="yotube-top-link"
-                            href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
+                            href="#"
                             >조코딩 유튜브 채널</a
                         >
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </nav>
