--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
                         <span class="sr-only">Loading...</span>
                     </div>
                     <p class="text-center">AI가 당신의 관상을 분석중입니다.</p>
+                    <p class="text-center">사진 데이터는 그 어디에도 저장, 전송되지 않습니다.</p>
+                    
                 </div>
                 <p class="result-message"></p>
                 <div id="label-container" class="d-flex flex-column justify-content-around"></div>
