--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="인공지능 관상" />
     <meta property="og:description" content="각 분야의 대표 유명인 사진 데이터로 학습한 인공지능이 나의 얼굴과 닮은 관상을 찾아드립니다." />
-    <meta property="og:image"
-        content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2Fc0eq42%2FbtqCQpiFhFn%2F8KPaOP9q8PXpJFRL7if55K%2Fimg.jpg" />
+    <meta property="og:image" content="https://gwansangnori.site/gwansang-icon.png" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
