--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="인공지능 관상" />
     <meta property="og:description" content="각 분야의 대표 유명인 사진 데이터로 학습한 인공지능이 나의 얼굴과 닮은 관상을 찾아드립니다." />
-    <meta property="og:image" content="https://gwansangnori.site/gwansang-icon.png" />
+    <meta property="og:image"
+        content="https://cdn.discordapp.com/attachments/1080354561975402499/1089532238951100426/risingsun_A_cute_pig_reading_his_fortune_59392f00-74a6-40aa-8c15-90dae134bffe.png" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
